# Verifast

./: .gitignore  Hack_luma.md  Progress.md  README.md  YC_hack.md  env.py  phase1_phase2_spec_prompt.md  pyproject.toml  race_test.py  race_test2.py  race_test3_lock.py
fsm-dsl-transpiler/: .gitignore  FROZEN.md  README.md  pyproject.toml
fsm-dsl-transpiler/examples/: seq_detect_101.fsm  traffic_light.fsm
fsm-dsl-transpiler/golden/: handshake.sv  seq_detect_101.sv  traffic_light.sv
fsm-dsl-transpiler/spec/: LANGUAGE_SPEC.md
fsm-dsl-transpiler/tests/: strategies.py  test_ast.py  test_cli.py  test_codegen.py  test_errors.py  test_frontend.py  test_parser.py  test_safety.py  test_strategies.py  test_transpiler.py
fsm-dsl-transpiler/transpiler/: ast.py  codegen.py  errors.py
rl-fsm/hud-env/: Dockerfile.hud  env.py  eval_local.py  grader.py  pyproject.toml  tasks.py  train.py
rl-fsm/hud-env/task_data/examples/: handshake.fsm
rl-fsm/hud-env/task_data/task_0000/: golden.sv
rl-fsm/hud-env/task_data/task_0002/: golden.sv  prompt.txt
rl-fsm/hud-env/task_data/task_0003/: golden.sv  prompt.txt
rl-fsm/hud-env/task_data/task_0004/: golden.sv
rl-fsm/hud-env/task_data/task_0005/: golden.sv
rl-fsm/hud-env/task_data/task_0006/: golden.sv  prompt.txt
rl-fsm/hud-env/task_data/task_0007/: prompt.txt
rl-fsm/hud-env/task_data/task_0009/: prompt.txt
rl-fsm/hud-env/task_data/task_0010/: golden.sv  prompt.txt
rl-fsm/hud-env/task_data/task_0011/: golden.sv
rl-fsm/hud-env/task_data/task_0012/: golden.sv  (+1 more)
rl-fsm/hud-env/transpiler/: __init__.py  grammar.lark
(+193 files in other folders)
