[project]
name = "fsm-dsl-transpiler"
version = "0.1.0"
description = "FSM_DSL v0.1 transpiler: a frozen Moore-FSM DSL to lint-clean, latch-free SystemVerilog (three-always-block style)."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "lark>=1.1,<2",
]

[project.scripts]
fsm-transpile = "transpiler.transpile:_console_main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "hypothesis>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transpiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "yosys: tests that require Yosys on PATH",
    "verilator: tests that require verilator on PATH",
]
