[project]
name = "fsm-dsl-rl-env"
version = "0.1.0"
description = "HUD RL environment: FSM hardware design via an LLM-friendly DSL (vs raw Verilog)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "hud-python>=0.6.5",
    "lark>=1.1",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["env.py", "tasks.py", "grader.py", "transpiler", "task_data"]
